Avoid tables created via ckeditor to overflow on small screens

--- a/html/themes/custom/common_design_subtheme/sass/odsg/components/_tables.scss
+++ b/html/themes/custom/common_design_subtheme/sass/odsg/components/_tables.scss
@@ -18,6 +18,7 @@ table {
     padding: 0.5rem;
     text-align: left;
     border: 1px solid $cd-site-bg-color;
+    word-break: break-word;
   }
 
   th {
